@@ -134,6 +134,10 @@
         flooding the window with identical messages.
     </li>
     <li>prunes messages to 250 lines</li>
+    <li>text message logger: add 'messagelog=true' to
+        ~/.crossfire/jxclient/jxclient.conf to enable the logger. When enabled,
+        all text messages are appended to log files
+        ~/.crossfire/jxclient/jxclient*.txt.</li>
 </ul>
 
 <h3>Command Input</h3>
